--- a/thomas/HTML/project.html
+++ b/thomas/HTML/project.html
@@ -14,8 +14,6 @@
 
     </head>
     <body>
-        <h2 id="title">Project Title</h2>
-
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -24,13 +22,13 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../image/69786526_2330927653841643_3051100133778259968_n.jpg" class="d-block w-100" alt="...">
+                    <img id="Img_caroussel_1" src="../image/69786526_2330927653841643_3051100133778259968_n.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="../image/IMG_2434.jpg" class="d-block w-100" alt="...">
+                    <img id="Img_caroussel_2" id="Img_caroussel_1" src="../image/IMG_2434.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="../image/IMG_2441-2.jpg" class="d-block w-100" alt="...">
+                    <img id="Img_caroussel_3" src="../image/IMG_2441-2.jpg" class="d-block w-100" alt="...">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -42,91 +40,106 @@
                 <span class="sr-only">Next</span>
             </a>
         </div>
+        <h2 id="title">Project Title</h2>
+<br><br>
 
-        <h3>Before</h3>
+        <h3 id="Subtitle_1">Before</h3>
 
-        <div>This is the paragraph about the situation before. Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+        <div id="Description_1">
+            This is the paragraph about the situation before. Lorem ipsum dolor sit amet, consectetur adipiscing elit,
             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
             exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
             in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
             sunt in culpa qui officia deserunt mollit anim id est laborum.
         </div>
         <section>
-                    <img class="img_before" src="../image/69786526_2330927653841643_3051100133778259968_n.jpg" alt=""/>
-                    <img class="img_before" src="../image/IMG_2434.jpg" alt=""/>
-                    <img class="img_before" src="../image/IMG_2441-2.jpg" alt=""/>
-            </section>   
+            <img id="Img_before_1" class="img_before" src="../image/69786526_2330927653841643_3051100133778259968_n.jpg" alt=""/>
+            <img id="Img_before_2" class="img_before" src="../image/IMG_2434.jpg" alt=""/>
+            <img id="Img_before_3" class="img_before" src="../image/IMG_2441-2.jpg" alt=""/>
+        </section>   
         <hr>
-        <h3>Works</h3>
+        <h3 id="Subtitle_2">Works</h3>
         <div id="Section_Work" class="container">
             <div class="row">
-                <div id="work1" class="workDiv col-md-3">
+                <div id="work1" class="workDiv col-md-2">
                     <img id="work1_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
                     <img id="work1_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
-                    
-
                 </div>
                 <div class="workSpace col-md-1"></div>
-                <div id="work2" class="workDiv col-md-4">
+                <div id="work2" class="workDiv col-md-2">
                     <img id="work2_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
                     <img id="work2_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
                 </div>
                 <div class="workSpace col-md-1"></div>
-                <div id="work3" class="workDiv col-md-3">
+                <div id="work3" class="workDiv col-md-2">
                     <img id="work3_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
                     <img id="work3_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
                 </div>
-            </div>
-            <div class="row">
-                <div id="work4" class="workDiv col-md-3">
+                <div class="workSpace col-md-1"></div>
+                <div id="work4" class="workDiv col-md-2">
                     <img id="work4_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
                     <img id="work4_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
                 </div>
-                <div class="workSpace col-md-1"></div>
-                <div id="work5" class="workDiv col-md-4">
+            </div>
+            <div class="row">
+                <div class="workSpace col-md-1-spe"></div>
+                <div id="work5" class="workDiv col-md-2">
                     <img id="work5_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
                     <img id="work5_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
                 </div>
                 <div class="workSpace col-md-1"></div>
-                <div id="work4" class="workDiv col-md-3">
-                    <img id="work4_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
-                    <img id="work4_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                <div id="work6" class="workDiv col-md-2">
+                    <img id="work6_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
+                    <img id="work6_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
                 </div>
+                <div class="workSpace col-md-1"></div>
+                <div id="work7" class="workDiv col-md-2">
+                    <img id="work7_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
+                    <img id="work7_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                </div>
+                <div class="workSpace col-md-1"></div>
+            </div>
+        <div class="row">
+            <div id="work8" class="workDiv col-md-2">
+                <img id="work8_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
+                <img id="work8_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+            </div>
+            <div class="workSpace col-md-1"></div>
+            <div id="work9" class="workDiv col-md-2">
+                <img id="work9_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
+                <img id="work9_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+            </div>
+            <div class="workSpace col-md-1"></div>
+            <div id="work10" class="workDiv col-md-2">
+                <img id="work10_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
+                <img id="work10_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+            </div>
+            <div class="workSpace col-md-1"></div>
+            <div id="work11" class="workDiv col-md-2">
+                <img id="work11_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
+                <img id="work11_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
             </div>
         </div>
-        <h3>The team</h3><br>
+        </div>
+        <h3 id="Subtitle_3">The team</h3><br>
         <section class="section_job job_left">
             <div id="job1" class="team">Archi : </div><div id="worker1" class="team">Jean Paul Sartre</div><br>
-            <div id="job3" class="team">Archi : </div><div id="worker3" class="team">Jean Paul Sartre</div><br>
-            <div id="job5" class="team">Archi : </div><div id="worker5" class="team">Jean Paul Sartre</div>
+            <div id="job3" class="team">Compagny : </div><div id="worker3" class="team">Jean Paul Sartre</div><br>
+            <div id="job5" class="team">Cameraman : </div><div id="worker5" class="team">Jean Paul Sartre</div>
         </section>
         <section class="section_job job_right">
-            <div id="job2" class="team">Archi : </div><div id="worker2" class="team">Jean Paul Sartre</div><br>
-            <div id="job4" class="team">Archi : </div><div id="worker4" class="team">Jean Paul Sartre</div><br>
-            <div id="job6" class="team">Archi : </div><div id="worker6" class="team">Jean Paul Sartre</div>
+            <div id="job2" class="team">Portugais : </div><div id="worker2" class="team">Jean Paul Sartre</div><br>
+            <div id="job4" class="team">Partner : </div><div id="worker4" class="team">Jean Paul Sartre</div><br>
+            <div id="job6" class="team">Partner : </div><div id="worker6" class="team">Jean Paul Sartre</div>
         </section>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
-    </br>
+    <br>
+    <br>
+<br>
+<br>
+<br>
+<br>
+<br>
+    <br>
     </body>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
