ajout de la partie "after"

--- a/thomas/HTML/project.html
+++ b/thomas/HTML/project.html
@@ -121,6 +121,22 @@
             </div>
         </div>
         </div>
+        <h3 id="Subtitle_1">After</h3>
+        
+        <div id="Description_1">
+            This is the paragraph about the situation after. Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
+            in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+            sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </div>
+        <section>
+            <img id="Img_after_1" class="img_after" src="../image/69786526_2330927653841643_3051100133778259968_n.jpg" alt="" />
+            <img id="Img_after_2" class="img_after" src="../image/IMG_2434.jpg" alt="" />
+            <img id="Img_after_3" class="img_after" src="../image/IMG_2441-2.jpg" alt="" />
+        </section>
+        <br>
+        <br>
         <h3 id="Subtitle_3">The team</h3><br>
         <section class="section_job job_left">
             <div id="job1" class="team">Archi : </div><div id="worker1" class="team">Jean Paul Sartre</div><br>
