Ajout des légendes pour Work

--- a/thomas/HTML/project.html
+++ b/thomas/HTML/project.html
@@ -64,66 +64,81 @@
                 <div id="work1" class="workDiv col-md-2">
                     <img id="work1_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
                     <img id="work1_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                    <p id="work1_legend" class="legend">Changement de peinture</p>
                 </div>
                 <div class="workSpace col-md-1"></div>
                 <div id="work2" class="workDiv col-md-2">
                     <img id="work2_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
                     <img id="work2_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                    <p id="work2_legend" class="legend">Changement de carrelage</p>
                 </div>
                 <div class="workSpace col-md-1"></div>
                 <div id="work3" class="workDiv col-md-2">
                     <img id="work3_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
                     <img id="work3_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                    <p id="work3_legend" class="legend">Changement de carrelage</p>
                 </div>
                 <div class="workSpace col-md-1"></div>
                 <div id="work4" class="workDiv col-md-2">
                     <img id="work4_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
                     <img id="work4_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                    <p id="work4_legend" class="legend">Changement de carrelage</p>
+
                 </div>
             </div>
+        </br>
             <div class="row">
                 <div class="workSpace col-md-1-spe"></div>
                 <div id="work5" class="workDiv col-md-2">
                     <img id="work5_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
                     <img id="work5_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                    <p id="work5_legend" class="legend">Changement de carrelage</p>
                 </div>
                 <div class="workSpace col-md-1"></div>
                 <div id="work6" class="workDiv col-md-2">
                     <img id="work6_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
                     <img id="work6_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                    <p id="work6_legend" class="legend">Changement de carrelage</p>
                 </div>
                 <div class="workSpace col-md-1"></div>
                 <div id="work7" class="workDiv col-md-2">
                     <img id="work7_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
                     <img id="work7_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                    <p id="work7_legend" class="legend">Changement de carrelage</p>
                 </div>
                 <div class="workSpace col-md-1"></div>
             </div>
+        </br>
         <div class="row">
             <div id="work8" class="workDiv col-md-2">
                 <img id="work8_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
                 <img id="work8_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                    <p id="work8_legend" class="legend">Changement de carrelage</p>
             </div>
             <div class="workSpace col-md-1"></div>
             <div id="work9" class="workDiv col-md-2">
                 <img id="work9_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
                 <img id="work9_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                    <p id="work9_legend" class="legend">Changement de carrelage</p>
             </div>
             <div class="workSpace col-md-1"></div>
             <div id="work10" class="workDiv col-md-2">
                 <img id="work10_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
                 <img id="work10_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                    <p id="work10_legend" class="legend">Changement de carrelage</p>
             </div>
             <div class="workSpace col-md-1"></div>
             <div id="work11" class="workDiv col-md-2">
                 <img id="work11_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
                 <img id="work11_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
+                    <p id="work11_legend" class="legend">Changement de carrelage</p>
             </div>
         </div>
+        </br>
         </div>
-        <h3 id="Subtitle_1">After</h3>
+        <h3 id="Subtitle_3">After</h3>
         
-        <div id="Description_1">
+        <div id="Description_3">
             This is the paragraph about the situation after. Lorem ipsum dolor sit amet, consectetur adipiscing elit,
             sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
             exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
@@ -137,7 +152,7 @@
         </section>
         <br>
         <br>
-        <h3 id="Subtitle_3">The team</h3><br>
+        <h3 id="Subtitle_4">The team</h3><br>
         <section class="section_job job_left">
             <div id="job1" class="team">Archi : </div><div id="worker1" class="team">Jean Paul Sartre</div><br>
             <div id="job3" class="team">Compagny : </div><div id="worker3" class="team">Jean Paul Sartre</div><br>
