Correction d'un double ID

--- a/thomas/HTML/project.html
+++ b/thomas/HTML/project.html
@@ -25,7 +25,7 @@
                     <img id="Img_caroussel_1" src="../image/69786526_2330927653841643_3051100133778259968_n.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img id="Img_caroussel_2" id="Img_caroussel_1" src="../image/IMG_2434.jpg" class="d-block w-100" alt="...">
+                    <img id="Img_caroussel_2" src="../image/IMG_2434.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
                     <img id="Img_caroussel_3" src="../image/IMG_2441-2.jpg" class="d-block w-100" alt="...">
