actualiqation de mes fichiers

--- a/thomas/HTML/project.html
+++ b/thomas/HTML/project.html
@@ -159,7 +159,7 @@
             <div id="job5" class="team">Cameraman : </div><div id="worker5" class="team">Jean Paul Sartre</div>
         </section>
         <section class="section_job job_right">
-            <div id="job2" class="team">Portugais : </div><div id="worker2" class="team">Jean Paul Sartre</div><br>
+            <div id="job2" class="team">Directeur de projet : </div><div id="worker2" class="team">Jean Paul Sartre</div><br>
             <div id="job4" class="team">Partner : </div><div id="worker4" class="team">Jean Paul Sartre</div><br>
             <div id="job6" class="team">Partner : </div><div id="worker6" class="team">Jean Paul Sartre</div>
         </section>
