--- a/Final actuel/HTML/Estimate.html
+++ b/Final actuel/HTML/Estimate.html
@@ -28,6 +28,7 @@
                     <span onclick="NightM()"><img src="../image/nightmode.png" alt="" id="moon"></span>
                 </div>
                 <div class="collapse navbar-collapse" id="mobileNav">
+                    <div ><a class="navbar-links page" id="display" href="../LOGIN/HTML/Login.html">login | register</a></div>
                     <a class="navbar-links page" href="p2test.html"> Page1</a> <br>
                     <a class="navbar-links page" href="Estimate.html"> Page2</a> <br>
                     <a class="navbar-links page" href="project.html"> Page pour dire que hugo est une merde</a>
@@ -44,7 +45,7 @@
             <br><br>
 
             <!--   <h3 id="Subtitle_1">Description</h3>-->
-            <hr class="idk"><p class="on_hr"><span class="subtitle">Dimensions</span></p>
+            <hr class="idk"><p class="on_hr"><span class="subtitle" id="title1">Dimensions</span></p>
             <br>
 
             <section>
@@ -57,31 +58,31 @@
             <br>
 
             <!--  <h3 id="Subtitle_2">Choices</h3>-->
-            <hr class="idk"><p class="on_hr"><span class="subtitle">Wall</span></p>
+            <hr class="idk"><p class="on_hr"><span class="subtitle" id="title2">Wall</span></p>
 
             <section>
                 <section class="section_left">
                     <form action="">
-                        <label class="nb_color">Number of new Color :</label><input  type="number" value="0" id="Nb_Color" max="5" min="0"></br>
+                        <label class="nb_color">Number of new Color :</label><input  type="number" value="0" id="Nb_Color" max="5" min="0"><br>
                     </form>
 
                 </section>
                 <section class="section_right">
                     <form action="">
-                        <label id="color1" class="color">Color 1 :</label><input  type="color" id="color_choice_1" class="color_choice"></input><br>
-                        <label id="color2" class="color">Color 2 :</label><input  type="color" id="color_choice_2" class="color_choice"></input><br>
-                        <label id="color3" class="color">Color 3 :</label><input  type="color" id="color_choice_3" class="color_choice"></input><br>
-                        <label id="color4" class="color">Color 4 :</label><input  type="color" id="color_choice_4" class="color_choice"></input><br>
-                        <label id="color5" class="color">Color 5 :</label><input  type="color" id="color_choice_5" class="color_choice"></input><br>
+                        <label id="color1" class="color">Color 1 :</label><input  type="color" id="color_choice_1" class="color_choice"><br>
+                        <label id="color2" class="color">Color 2 :</label><input  type="color" id="color_choice_2" class="color_choice"><br>
+                        <label id="color3" class="color">Color 3 :</label><input  type="color" id="color_choice_3" class="color_choice"><br>
+                        <label id="color4" class="color">Color 4 :</label><input  type="color" id="color_choice_4" class="color_choice"><br>
+                        <label id="color5" class="color">Color 5 :</label><input  type="color" id="color_choice_5" class="color_choice"><br>
                     </form>
                 </section>      
             </section>
-            </br>
-            <hr class="idk"><p class="on_hr"><span class="subtitle">Furnitures</span></p>
+            <br>
+            <hr class="idk"><p class="on_hr"><span class="subtitle" id="title3">Furnitures</span></p>
             <section>
                 <div>You have to choice the kind of furniture, and chose your(s) favorite(s) one(s)</div>
                 <form id="form_furniture" action="">
-                    <label for="">Type of furniture : </label>
+                    <label for="furniture">Type of furniture : </label>
                     <select id="furniture">
                         <option value="all">All</option>
                         <option value="bed">Bed</option>
@@ -95,96 +96,96 @@
                         <div class="row">
 
                             <div id="bed1" class="select_furniture bed col-md-5 ">
-                                <input type="checkbox" name="" id="bed1_input" class="checkbox">
+                                <input type="checkbox" name="Bed1" id="bed1_input" class="checkbox">
                                 <label for="bed1_input">
                                     <div class="container row">
                                         <div class=" col-sm-5"><img class="img_furniture" src="../image/furnitures/bed/bed1.jpg" alt=""></div>
                                         <section class="furniture_right col-sm-7">
-                                            <div class="furniture_name">Bed 1</div>
+                                            <div class="furniture_name" id="furniture_name_1">Bed 1</div>
                                             <div class="furniture_dimension">
-                                                <div class="length">120</div>x<div class="width">80</div>x<div class="height">90</div>
+                                                <div class="length" id="length1">120</div>x<div class="width" id="width1">80</div>x<div class="height" id="height1">90</div>
                                             </div>
-                                            <p class="furniture_description">Très confortable</p>
+                                            <p class="furniture_description" id="furniture_description_1">Très confortable</p>
                                         </section>
                                     </div>
                                 </label>
                             </div>
 
                             <div id="bed2" class="select_furniture bed col-md-5 ">
-                                <input type="checkbox" name="" id="bed2_input" class="checkbox">
+                                <input type="checkbox" name="Bed2" id="bed2_input" class="checkbox">
                                 <label for="bed2_input">
                                     <div class="container row">
                                         <div class=" col-sm-5"><img class="img_furniture" src="../image/furnitures/bed/bed2.jpg" alt=""></div>
                                         <section class="furniture_right col-sm-7">
-                                            <div class="furniture_name">Bed 2</div>
+                                            <div class="furniture_name" id="furniture_name_2">Bed 2</div>
                                             <div class="furniture_dimension">
-                                                <div class="length">120</div>x<div class="width">80</div>x<div class="height">90</div>
+                                                <div class="length" id="length2">120</div>x<div class="width" id="width2">80</div>x<div class="height" id="height2">90</div>
                                             </div>
-                                            <p class="furniture_description">Plutôt pas mal</p>
+                                            <p class="furniture_description" id="furniture_description_2">Plutôt pas mal</p>
                                         </section>
                                     </div>
                                 </label>
                             </div>
 
                             <div id="bed3" class="select_furniture bed col-md-5 ">
-                                <input type="checkbox" name="" id="bed3_input" class="checkbox">
+                                <input type="checkbox" name="Bed3" id="bed3_input" class="checkbox">
                                 <label for="bed3_input">
                                     <div class="container row">
                                         <div class=" col-sm-5"><img class="img_furniture" src="../image/furnitures/bed/bed3.jpg" alt=""></div>
                                         <section class="furniture_right col-sm-7">
-                                            <div class="furniture_name">Bed 3</div>
+                                            <div class="furniture_name" id="furniture_name_3">Bed 3</div>
                                             <div class="furniture_dimension">
-                                                <div class="length">120</div>x<div class="width">80</div>x<div class="height">90</div>
+                                                <div class="length" id="length3">120</div>x<div class="width" id="width3">80</div>x<div class="height" id="height3">90</div>
                                             </div>
-                                            <p class="furniture_description">Nickel</p>
+                                            <p class="furniture_description" id="furniture_description_3">Nickel</p>
                                         </section>
                                     </div>
                                 </label>
                             </div>
 
                             <div id="table1" class="select_furniture table col-md-5 ">
-                                <input type="checkbox" name="" id="table1_input" class="checkbox">
+                                <input type="checkbox" name="Table1" id="table1_input" class="checkbox">
                                 <label for="table1_input">
                                     <div class="container row">
                                         <div class=" col-sm-5"><img class="img_furniture" src="../image/furnitures/table/table1.jpg" alt=""></div>
                                         <section class="furniture_right col-sm-7">
-                                            <div class="furniture_name">table 1</div>
+                                            <div class="furniture_name" id="furniture_name_4">table 1</div>
                                             <div class="furniture_dimension">
-                                                <div class="length">120</div>x<div class="width">80</div>x<div class="height">90</div>
+                                                <div class="length" id="length4">120</div>x<div class="width" id="width4">80</div>x<div class="height" id="height4">90</div>
                                             </div>
-                                            <p class="furniture_description">Vive la longueur</p>
+                                            <p class="furniture_description" id="furniture_description_4">Vive la longueur</p>
                                         </section>
                                     </div>
                                 </label>
                             </div>
 
                             <div id="table2" class="select_furniture table col-md-5 ">
-                                <input type="checkbox" name="" id="table2_input" class="checkbox">
+                                <input type="checkbox" name="Table3" id="table2_input" class="checkbox">
                                 <label for="table2_input">
                                     <div class="container row">
                                         <div class=" col-sm-5"><img class="img_furniture" src="../image/furnitures/table/table2.jpg" alt=""></div>
                                         <section class="furniture_right col-sm-7">
-                                            <div class="furniture_name">table 2</div>
+                                            <div class="furniture_name" id="furniture_name_5">table 2</div>
                                             <div class="furniture_dimension">
-                                                <div class="length">120</div>x<div class="width">80</div>x<div class="height">90</div>
+                                                <div class="length" id="length5">120</div>x<div class="width" id="width5">80</div>x<div class="height" id="height5">90</div>
                                             </div>
-                                            <p class="furniture_description">Très bien pour travailler</p>
+                                            <p class="furniture_description" id="furniture_description_5">Très bien pour travailler</p>
                                         </section>
                                     </div>
                                 </label>
                             </div>
 
                             <div id="table3" class="select_furniture table col-md-5 ">
-                                <input type="checkbox" name="" id="table3_input" class="checkbox">
+                                <input type="checkbox" name="Table3" id="table3_input" class="checkbox">
                                 <label for="table3_input">
                                     <div class="container row">
                                         <div class=" col-sm-5"><img class="img_furniture" src="../image/furnitures/table/table3.jpg" alt=""></div>
                                         <section class="furniture_right col-sm-7">
-                                            <div class="furniture_name">table 3</div>
+                                            <div class="furniture_name" id="furniture_name_6">table 3</div>
                                             <div class="furniture_dimension">
-                                                <div class="length">120</div>x<div class="width">80</div>x<div class="height">90</div>
+                                                <div class="length" id="length6">120</div>x<div class="width" id="width6">80</div>x<div class="height" id="height6">90</div>
                                             </div>
-                                            <p class="furniture_description">Originale</p>
+                                            <p class="furniture_description" id="furniture_description_6">Originale</p>
                                         </section>
                                     </div>
                                 </label>
@@ -195,7 +196,7 @@
             </section>
 
             <hr class="idk">
-            <p class="on_hr"><span class="subtitle">Ground</span></p>
+            <p class="on_hr"><span class="subtitle" id="title4">Ground</span></p>
 
             <div class="container">
                 <ul>
@@ -236,7 +237,7 @@
             <div class="row">
                 <div class="col-md-5"></div>
                 <div class="col-md-2">
-                    <button class="button" id="style" style="vertical-align:middle"><span>Valider </span></button>
+                    <button class="button" id="Valider" style="vertical-align:middle"><span>Valider </span></button>
                 </div>
             </div>
             <br>
@@ -279,6 +280,7 @@
         </div>
     </body>
     <script src="../JS/estimate.js" type="text/javascript"></script>
+    <script src="../Admin/JS/ApercuEstimate.js" type="text/javascript"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
@@ -289,5 +291,4 @@
             integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
     crossorigin="anonymous"></script>
     <script src="../JS/JSNavBar.js" type="text/javascript"></script>
-
 </html>
