--- a/Final actuel/HTML/project.html
+++ b/Final actuel/HTML/project.html
@@ -177,6 +177,18 @@
                 <div id="job6" class="team">Partner : </div><div id="worker6" class="team">Jean Paul Sartre</div>
             </section>
             <br>
+    <hr><p class="on_hr"><span>Avis</span></p>
+        <div id="avis">
+    <div class="rating">
+                                <span id="etoile1">☆</span>
+                                <span id="etoile2" >☆</span>
+                                <span id="etoile3" >☆</span>
+                                <span id="etoile4" >☆</span>
+                                <span id="etoile5">☆</span>
+                            </div>
+                            <div id="Nom"></div>
+                            <div id="comment">voici le commentaire</div>
+</div>
             <br>
             <br>
             <br>
