--- a/Final actuel/HTML/HTMLAdminProject.html
+++ b/Final actuel/HTML/HTMLAdminProject.html
@@ -9,9 +9,9 @@
         <meta name="description" content="Site donnant accès à une multitude de cours">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <link href="../CSS/AdminCSSProject.css" rel="stylesheet" type="text/css"/>
-        <link href="../../CSS/navbar.css" rel="stylesheet" type="text/css"/>
-        <link href="../../CSS/nmode.css" rel="stylesheet" type="text/css"/>
-        <link href="../../font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+        <link href="../CSS/navbar.css" rel="stylesheet" type="text/css"/>
+        <link href="../CSS/nmode.css" rel="stylesheet" type="text/css"/>
+        <link href="../font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
         <title>Archi</title> <!--  Nom du site affiché dans l'onglet  -->
 
     </head>
@@ -24,19 +24,19 @@
                         <span class="icon-bar"><i class="fa fa-angle-double-down mr-1"></i></span>      
                     </button> 
                     <a class="navbar-brand" href="Accueil.html">[Nom du site]</a>
-                    <span onclick="NightM()"><img src="../../image/nightmode.png" alt="" id="moon"></span>
+                    <span onclick="NightM()"><img src="../image/nightmode.png" alt="" id="moon"></span>
                 </div>
                 <div class="collapse navbar-collapse" id="mobileNav">
-                    <div ><a class="navbar-links page" id="display" href="../../LOGIN/HTML/Login.html">login | register</a></div>
+                    <div ><a class="navbar-links page" id="display" href="../LOGIN/HTML/Login.html">login | register</a></div>
                     <a class="navbar-links page" href="HTMLAdminEstimate.html"> Admin Estimate</a> <br>
-                    <a class="navbar-links page" href="../../HTML/Estimate.html"> Estimate</a> <br>
-                    <a class="navbar-links page" href="../../HTML/project.html"> Projet</a>
+                    <a class="navbar-links page" href="../HTML/Estimate.html"> Estimate</a> <br>
+                    <a class="navbar-links page" href="../HTML/project.html"> Projet</a>
                 </div>
             </div>
         </nav>
 
         <div class="overlay">
-            <img id="Img_caroussel_2" src="../../image/IMG_2434.jpg" class="d-block w-100" alt="...">
+            <img id="Img_caroussel_2" src="../image/IMG_2434.jpg" class="d-block w-100" alt="...">
             
         <div id="Change_Project">
             <label for="Title_Project">Title project :</label>
@@ -58,9 +58,9 @@
         </div>
 
         <section>
-            <img id="Img_before_1" class="img_before" src="../../image/69786526_2330927653841643_3051100133778259968_n.jpg" alt=""/>
-            <img id="Img_before_2" class="img_before" src="../../image/IMG_2434.jpg" alt=""/>
-            <img id="Img_before_3" class="img_before" src="../../image/IMG_2441-2.jpg" alt=""/>
+            <img id="Img_before_1" class="img_before" src="../image/69786526_2330927653841643_3051100133778259968_n.jpg" alt=""/>
+            <img id="Img_before_2" class="img_before" src="../image/IMG_2434.jpg" alt=""/>
+            <img id="Img_before_3" class="img_before" src="../image/IMG_2441-2.jpg" alt=""/>
         </section>   
         <hr>
         <div>
@@ -73,26 +73,26 @@
             <div id="Section_Work" class="container">
                 <div class="row">
                     <div id="work1" class="workDiv col-md-2">
-                        <img id="work1_before" class="work before" src="../../image/IMG_2434.jpg" alt="" />
-                        <img id="work1_after" class="work after" src="../../image/IMG_2441-2.jpg" alt="" />
+                        <img id="work1_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
+                        <img id="work1_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
                         <div><input type="text" class="Change_input_legend" id="Work1_legend"></div>
                     </div>
                     <div class="workSpace col-md-1"></div>
                     <div id="work2" class="workDiv col-md-2">
-                        <img id="work2_before" class="work before" src="../../image/IMG_2434.jpg" alt="" />
-                        <img id="work2_after" class="work after" src="../../image/IMG_2441-2.jpg" alt="" />
+                        <img id="work2_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
+                        <img id="work2_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
                         <div><input type="text" class="Change_input_legend" id="Work2_legend"></div>
                     </div>
                     <div class="workSpace col-md-1"></div>
                     <div id="work3" class="workDiv col-md-2">
-                        <img id="work3_before" class="work before" src="../../image/IMG_2434.jpg" alt="" />
-                        <img id="work3_after" class="work after" src="../../image/IMG_2441-2.jpg" alt="" />
+                        <img id="work3_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
+                        <img id="work3_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
                        <div><input type="text" class="Change_input_legend" id="Work3_legend"></div>
                     </div>
                     <div class="workSpace col-md-1"></div>
                     <div id="work4" class="workDiv col-md-2">
-                        <img id="work4_before" class="work before" src="../../image/IMG_2434.jpg" alt="" />
-                        <img id="work4_after" class="work after" src="../../image/IMG_2441-2.jpg" alt="" />
+                        <img id="work4_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
+                        <img id="work4_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
                         <div><input type="text" class="Change_input_legend" id="Work4_legend"></div>
 
                     </div>
@@ -101,20 +101,20 @@
                 <div class="row">
                     <div class="workSpace col-md-1-spe"></div>
                     <div id="work5" class="workDiv col-md-2">
-                        <img id="work5_before" class="work before" src="../../image/IMG_2434.jpg" alt="" />
-                        <img id="work5_after" class="work after" src="../../image/IMG_2441-2.jpg" alt="" />
+                        <img id="work5_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
+                        <img id="work5_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
                         <div><input type="text" class="Change_input_legend" id="Work5_legend"></div>
                     </div>
                     <div class="workSpace col-md-1"></div>
                     <div id="work6" class="workDiv col-md-2">
-                        <img id="work6_before" class="work before" src="../../image/IMG_2434.jpg" alt="" />
-                        <img id="work6_after" class="work after" src="../../image/IMG_2441-2.jpg" alt="" />
+                        <img id="work6_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
+                        <img id="work6_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
                         <div><input type="text" class="Change_input_legend" id="Work6_legend"></div>
                     </div>
                     <div class="workSpace col-md-1"></div>
                     <div id="work7" class="workDiv col-md-2">
-                        <img id="work7_before" class="work before" src="../../image/IMG_2434.jpg" alt="" />
-                        <img id="work7_after" class="work after" src="../../image/IMG_2441-2.jpg" alt="" />
+                        <img id="work7_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
+                        <img id="work7_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
                         <div><input type="text" class="Change_input_legend" id="Work7_legend"></div>
                     </div>
                     <div class="workSpace col-md-1"></div>
@@ -122,26 +122,26 @@
                 <br>
                 <div class="row">
                     <div id="work8" class="workDiv col-md-2">
-                        <img id="work8_before" class="work before" src="../../image/IMG_2434.jpg" alt="" />
-                        <img id="work8_after" class="work after" src="../../image/IMG_2441-2.jpg" alt="" />
+                        <img id="work8_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
+                        <img id="work8_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
                         <div><input type="text" class="Change_input_legend" id="Work8_legend"></div>
                     </div>
                     <div class="workSpace col-md-1"></div>
                     <div id="work9" class="workDiv col-md-2">
-                        <img id="work9_before" class="work before" src="../../image/IMG_2434.jpg" alt="" />
-                        <img id="work9_after" class="work after" src="../../image/IMG_2441-2.jpg" alt="" />
+                        <img id="work9_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
+                        <img id="work9_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
                         <div><input type="text" class="Change_input_legend" id="Work9_legend"></div>
                     </div>
                     <div class="workSpace col-md-1"></div>
                     <div id="work10" class="workDiv col-md-2">
-                        <img id="work10_before" class="work before" src="../../image/IMG_2434.jpg" alt="" />
-                        <img id="work10_after" class="work after" src="../../image/IMG_2441-2.jpg" alt="" />
+                        <img id="work10_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
+                        <img id="work10_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
                         <div><input type="text" class="Change_input_legend" id="Work10_legend"></div>
                     </div>
                     <div class="workSpace col-md-1"></div>
                     <div id="work11" class="workDiv col-md-2">
-                        <img id="work11_before" class="work before" src="../../image/IMG_2434.jpg" alt="" />
-                        <img id="work11_after" class="work after" src="../../image/IMG_2441-2.jpg" alt="" />
+                        <img id="work11_before" class="work before" src="../image/IMG_2434.jpg" alt="" />
+                        <img id="work11_after" class="work after" src="../image/IMG_2441-2.jpg" alt="" />
                         <div><input type="text" class="Change_input_legend" id="Work11_legend"></div>
                     </div>
                 </div>
@@ -162,9 +162,9 @@
             </div>
 
             <section>
-                <img id="Img_after_1" class="img_after" src="../../image/69786526_2330927653841643_3051100133778259968_n.jpg" alt="" />
-                <img id="Img_after_2" class="img_after" src="../../image/IMG_2434.jpg" alt="" />
-                <img id="Img_after_3" class="img_after" src="../../image/IMG_2441-2.jpg" alt="" />
+                <img id="Img_after_1" class="img_after" src="../image/69786526_2330927653841643_3051100133778259968_n.jpg" alt="" />
+                <img id="Img_after_2" class="img_after" src="../image/IMG_2434.jpg" alt="" />
+                <img id="Img_after_3" class="img_after" src="../image/IMG_2441-2.jpg" alt="" />
             </section>
             <br>
             <br>
@@ -199,5 +199,5 @@
             <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-                <script src="../../JS/JSNavBar.js" type="text/javascript"></script>
+                <script src="../JS/JSNavBar.js" type="text/javascript"></script>
 </html>
