ajout de la nav

--- a/Final actuel/HTML/project.html
+++ b/Final actuel/HTML/project.html
@@ -23,13 +23,13 @@
                         <!-- <span class="sr-only">Toggle navigation</span> -->
                         <span class="icon-bar"><i class="fa fa-angle-double-down mr-1"></i></span>      
                     </button> 
-                    <a class="navbar-brand" href="Accueil.html">[Nom du site]</a>
+                    <a class="navbar-brand" href="Accueil.html">Kebab master</a>
                     <span onclick="NightM()"><img src="../image/nightmode.png" alt="" id="moon"></span>
                 </div>
                 <div class="collapse navbar-collapse" id="mobileNav">
-                    <a class="navbar-links page" href="p2test.html"> Page1</a> <br>
-                    <a class="navbar-links page" href="Estimate.html"> Page2</a> <br>
-                    <a class="navbar-links page" href="project.html"> Page pour dire que hugo est une merde</a>
+                    <div ><a class="navbar-links page" id="display" href="Login.html">login | register</a></div>
+                    <a class="navbar-links page" href="project.html"> Project</a> <br>
+                    <a class="navbar-links page" href="Estimate.html"> Devis</a> <br>
                 </div>
             </div>
         </nav>
