--- a/Final actuel/HTML/HTMLAdminEstimate.html
+++ b/Final actuel/HTML/HTMLAdminEstimate.html
@@ -24,18 +24,16 @@
                         <!-- <span class="sr-only">Toggle navigation</span> -->
                         <span class="icon-bar"><i class="fa fa-angle-double-down mr-1"></i></span>      
                     </button> 
-                    <a class="navbar-brand" href="Accueil.html">[Nom du site]</a>
+                    <a class="navbar-brand" href="Accueil.html">Kebab master</a>
                     <span onclick="NightM()"><img src="../image/nightmode.png" alt="" id="moon"></span>
                 </div>
                 <div class="collapse navbar-collapse" id="mobileNav">
-                    <div ><a class="navbar-links page" id="display" href="../LOGIN/HTML/Login.html">login | register</a></div>
-                    <a class="navbar-links page" href="HTMLAdminProject.html"> Admin project</a> <br>
-                    <a class="navbar-links page" href="../HTML/Estimate.html"> Estimate</a> <br>
-                    <a class="navbar-links page" href="../HTML/project.html"> Projet</a>
+                    <div ><a class="navbar-links page" id="display" href="Login.html">login | register</a></div>
+                    <a class="navbar-links page" href="project.html"> Project</a> <br>
+                    <a class="navbar-links page" href="Estimate.html"> Devis</a> <br>
                 </div>
             </div>
         </nav>
-
         <div class="overlay">
             <img id="Img_caroussel_2" src="../image/IMG_2434.jpg" class="d-block w-100" alt="...">
             
