--- a/Final actuel/HTML/HTMLAdminProject.html
+++ b/Final actuel/HTML/HTMLAdminProject.html
@@ -23,14 +23,13 @@
                         <!-- <span class="sr-only">Toggle navigation</span> -->
                         <span class="icon-bar"><i class="fa fa-angle-double-down mr-1"></i></span>      
                     </button> 
-                    <a class="navbar-brand" href="Accueil.html">[Nom du site]</a>
+                    <a class="navbar-brand" href="Accueil.html">Kebab master</a>
                     <span onclick="NightM()"><img src="../image/nightmode.png" alt="" id="moon"></span>
                 </div>
                 <div class="collapse navbar-collapse" id="mobileNav">
-                    <div ><a class="navbar-links page" id="display" href="../LOGIN/HTML/Login.html">login | register</a></div>
-                    <a class="navbar-links page" href="HTMLAdminEstimate.html"> Admin Estimate</a> <br>
-                    <a class="navbar-links page" href="../HTML/Estimate.html"> Estimate</a> <br>
-                    <a class="navbar-links page" href="../HTML/project.html"> Projet</a>
+                    <div ><a class="navbar-links page" id="display" href="Login.html">login | register</a></div>
+                    <a class="navbar-links page" href="project.html"> Project</a> <br>
+                    <a class="navbar-links page" href="Estimate.html"> Devis</a> <br>
                 </div>
             </div>
         </nav>
