--- a/Final actuel/HTML/commentaire.html
+++ b/Final actuel/HTML/commentaire.html
@@ -14,6 +14,23 @@ and open the template in the editor.
         <link href="../CSS/csscom.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
+        <nav class="navbar navbar-fixed-top navbar--color--ghost navbar--size--xl" data-startColor="navbar--color--ghost" data-startSize="navbar--size--xl" data-intoColor="navbar--color--secondary" data-intoSize="navbar--size--md">
+            <div class="container-nav">
+                <div class="navbar-header">
+                    <button class="navbar-toggle collapsed buton" type="button" data-toggle="collapse" data-target="#mobileNav" aria-expanded="false">
+                        <!-- <span class="sr-only">Toggle navigation</span> -->
+                        <span class="icon-bar"><i class="fa fa-angle-double-down mr-1"></i></span>      
+                    </button> 
+                    <a class="navbar-brand" href="Accueil.html">Kebab master</a>
+                    <span onclick="NightM()"><img src="../image/nightmode.png" alt="" id="moon"></span>
+                </div>
+                <div class="collapse navbar-collapse" id="mobileNav">
+                    <div ><a class="navbar-links page" id="display" href="Login.html">login | register</a></div>
+                    <a class="navbar-links page" href="project.html"> Project</a> <br>
+                    <a class="navbar-links page" href="Estimate.html"> Devis</a> <br>
+                </div>
+            </div>
+        </nav>
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-12">
