--- a/Final actuel/HTML/index.html
+++ b/Final actuel/HTML/index.html
@@ -21,20 +21,20 @@ and open the template in the editor.
         <!-- available colors: primary | secondary | white | ghost-->
         <!-- available sizes: xl | lg | md | sm-->
         <!-- the bootstrap navbar-->
-        <nav class="navbar navbar-fixed-top navbar--color--ghost navbar--size--xl" data-startColor="navbar--color--ghost" data-startSize="navbar--size--xl" data-intoColor="navbar--color--secondary" data-intoSize="navbar--size--md">
+       <nav class="navbar navbar-fixed-top navbar--color--ghost navbar--size--xl" data-startColor="navbar--color--ghost" data-startSize="navbar--size--xl" data-intoColor="navbar--color--secondary" data-intoSize="navbar--size--md">
             <div class="container-nav">
                 <div class="navbar-header">
-                     <button class="navbar-toggle collapsed buton" type="button" data-toggle="collapse" data-target="#mobileNav" aria-expanded="false">
+                    <button class="navbar-toggle collapsed buton" type="button" data-toggle="collapse" data-target="#mobileNav" aria-expanded="false">
                         <!-- <span class="sr-only">Toggle navigation</span> -->
                         <span class="icon-bar"><i class="fa fa-angle-double-down mr-1"></i></span>      
                     </button> 
-                    <a class="navbar-brand" href="#">[Nom du site]</a>
+                    <a class="navbar-brand" href="Accueil.html">Kebab master</a>
                     <span onclick="NightM()"><img src="../image/nightmode.png" alt="" id="moon"></span>
                 </div>
                 <div class="collapse navbar-collapse" id="mobileNav">
-                    <a class="navbar-links page" href="p2test.html"> Page1</a> <br>
-                    <a class="navbar-links page" href="Estimate.html"> Page2</a> <br>
-                    <a class="navbar-links page" href="project.html"> Page pour dire que hugo est une merde</a>
+                    <div ><a class="navbar-links page" id="display" href="Login.html">login | register</a></div>
+                    <a class="navbar-links page" href="project.html"> Project</a> <br>
+                    <a class="navbar-links page" href="Estimate.html"> Devis</a> <br>
                 </div>
             </div>
         </nav>
