corrections des bug

--- a/Final actuel/HTML/HTMLAdminProject.html
+++ b/Final actuel/HTML/HTMLAdminProject.html
@@ -29,7 +29,7 @@
                 <div class="collapse navbar-collapse" id="mobileNav">
                     <div ><a class="navbar-links page" id="display" href="Login.html">login | register</a></div>
                     <a class="navbar-links page" href="project.html"> Project</a> <br>
-                    <a class="navbar-links page" href="Estimate.html"> Devis</a> <br>
+                    <a class="navbar-links page" href="HTMLAdminEstimate.html"> Devis</a> <br>
                 </div>
             </div>
         </nav>
