--- a/Final actuel/HTML/Login.html
+++ b/Final actuel/HTML/Login.html
@@ -5,8 +5,8 @@
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-             <link href="../../font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
-        <link href="../CSS/css.css" rel="stylesheet" type="text/css"/>
+             <link href="../font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
+        <link href="../CSS/Login.css" rel="stylesheet" type="text/css"/>
 
     </head>
     <body>
@@ -26,9 +26,7 @@
                         <input type="password" class="pass-key" id="password"  placeholder="Password" required>
                         <span class="show"></span>
                     </div>
-                    <div class="pass">
-                        <a href="Forgot.html">Forgot Password?</a>
-                    </div>
+                   
                     <div class="field">
                        <button type="button" class="button" onClick="login()">Sign in</button>
                     </div>
