--- a/Final actuel/HTML/Contact.html
+++ b/Final actuel/HTML/Contact.html
@@ -40,7 +40,7 @@ and open the template in the editor.
                 <div class="col-12 col-md-6 col-lg-12">
                     <div class="card bg-dark mb-3" style="width:100% ; margin-top: 5vh">
                         <div class="card-header"><h4 >NOUS CONTACTER</h4></div>
-                        <div class="container">
+                        <div class="container c1">
                               <div class="row">
                               <div class="col-md-12">
                             <p>Besoin d'un renseignement :</p>
