Page report refaite + revisite NavBar pour page petite

--- a/Final actuel/HTML/Accueil.html
+++ b/Final actuel/HTML/Accueil.html
@@ -18,8 +18,8 @@
                 <div class="navbar-header">
                     <button class="navbar-toggle collapsed buton" type="button" data-toggle="collapse" data-target="#mobileNav" aria-expanded="false">
                         <!-- <span class="sr-only">Toggle navigation</span> -->
-                        <span class="icon-bar"><i class="fa fa-angle-double-down mr-1"></i></span>      
-                    </button> 
+                        <span class="icon-bar"><i class="fa fa-angle-double-down mr-1"></i></span>
+                    </button>
                     <a class="navbar-brand" href="Accueil.html">Kebab master</a>
                     <span onclick="NightM()"><img src="../image/nightmode.png" alt="" id="moon"></span>
                 </div>
@@ -64,13 +64,13 @@
             </div>
             <section class="pres_right1">
                 <div class="mosa">
-                    <a href="#"><div class="desc1 subtitle" data-aos="fade-left" data-aos-duration="2000">Projets</div>
+                    <a href="#"><div class="desc1 subtitle1" data-aos="fade-left" data-aos-duration="2000">Projets</div>
                     <img src="../image/app3.jpg" alt="..." class="img2" data-aos="fade-left" data-aos-duration="2000"/></a>
                     <br>
                     <a href="#"><img src="../image/app3.jpg" alt="..." class="img2" data-aos="fade-left" data-aos-duration="2000"/>
-                    <div class="desc1 subtitle" data-aos="fade-left" data-aos-duration="2000">Devis en ligne</div></a>
+                    <div class="desc1 subtitle1" data-aos="fade-left" data-aos-duration="2000">Devis en ligne</div></a>
                     <br>
-                    <a href="#"><div class="desc1 subtitle" data-aos="fade-left" data-aos-duration="2000">Travaux Professionnels</div>
+                    <a href="#"><div class="desc1 subtitle1" data-aos="fade-left" data-aos-duration="2000">Travaux Professionnels</div>
                     <img src="../image/app3.jpg" alt="..." class="img2" data-aos="fade-left" data-aos-duration="2000"/></a>
                 </div>
             </section>
