--- a/Final actuel/HTML/Accueil.html
+++ b/Final actuel/HTML/Accueil.html
@@ -64,13 +64,13 @@
             </div>
             <section class="pres_right1">
                 <div class="mosa">
-                    <a href="#"><div class="desc1 subtitle1" data-aos="fade-left" data-aos-duration="2000">Projets</div>
+                    <a href="#"><div class="desc1" data-aos="fade-left" data-aos-duration="2000">Projets</div>
                     <img src="../image/app3.jpg" alt="..." class="img2" data-aos="fade-left" data-aos-duration="2000"/></a>
                     <br>
                     <a href="#"><img src="../image/app3.jpg" alt="..." class="img2" data-aos="fade-left" data-aos-duration="2000"/>
-                    <div class="desc1 subtitle1" data-aos="fade-left" data-aos-duration="2000">Devis en ligne</div></a>
+                    <div class="desc1" data-aos="fade-left" data-aos-duration="2000">Devis en ligne</div></a>
                     <br>
-                    <a href="#"><div class="desc1 subtitle1" data-aos="fade-left" data-aos-duration="2000">Travaux Professionnels</div>
+                    <a href="#"><div class="desc" data-aos="fade-left" data-aos-duration="2000">Travaux Professionnels</div>
                     <img src="../image/app3.jpg" alt="..." class="img2" data-aos="fade-left" data-aos-duration="2000"/></a>
                 </div>
             </section>
