ajout div devis

--- a/Final actuel/HTML/Estimate.html
+++ b/Final actuel/HTML/Estimate.html
@@ -221,16 +221,6 @@
                     </div>
                 </ul>
             </div>
-
-
-
-
-
-
-
-
-            <br>
-            <br>
             <br>
             <br>
             <div class="row">
@@ -239,6 +229,23 @@
                     <button class="button" id="Valider" style="vertical-align:middle"><span>Valider </span></button>
                 </div>
             </div>
+            <br>
+
+            <section class="resume">
+
+                <div id="resume_title">Le deivs</div>
+                <div>Dimensions de la pièce : <p id="resume_length" class='resume_lwh'></p>x<p id="resume_width" class='resume_lwh'></p>x<p id="resume_heigth" class='resume_lwh'></p></div>
+                <div>Vous avez choisis<p id="resume_nbColor"></p>couleurs pour les mur</div>
+
+                <div class="resume_color" id="resume_color1"></div>
+                <div class="resume_color" id="resume_color2"></div>
+                <div class="resume_color" id="resume_color3"></div>
+                <div class="resume_color" id="resume_color4"></div>
+                <div class="resume_color" id="resume_color5"></div>
+
+            </section>
+            <br>
+            
             <br>
             <br>
             <br>
