--- a/Final actuel/HTML/HTMLAdminEstimate.html
+++ b/Final actuel/HTML/HTMLAdminEstimate.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="autor" content="Millet Hugo, Bernet Matthis, Cousseau Mathias, Sorroche Loïc et BUTON Thomas et JP">
+    <meta name="autor" content="Millet Hugo, Bernet Matthis, Cousseau Mathias, Sorroche Loïc et BUTON Thomas">
     <meta name="description" content="Site donnant accès à une multitude de cours">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="../CSS/AdminEstimate.css" rel="stylesheet" type="text/css"/>
