faute pas belle changée

--- a/Final actuel/HTML/Estimate.html
+++ b/Final actuel/HTML/Estimate.html
@@ -233,7 +233,7 @@
 
             <section class="resume">
 
-                <div id="resume_title">Le deivs</div>
+                <div id="resume_title">Le devis</div>
                 <div>Dimensions de la pièce : <p id="resume_length" class='resume_lwh'></p>x<p id="resume_width" class='resume_lwh'></p>x<p id="resume_heigth" class='resume_lwh'></p></div>
                 <div>Vous avez choisis<p id="resume_nbColor"></p>couleurs pour les mur</div>
 
