--- a/Final actuel/HTML/Estimate.html
+++ b/Final actuel/HTML/Estimate.html
@@ -38,7 +38,7 @@
         <div class="overlay">
             <img id="Img_caroussel_2" src="../image/IMG_2434.jpg" class="d-block w-100" alt="...">
 
-
+            
 
             <h2 id="title">Estimate of work</h2>
             <br><br>
@@ -235,13 +235,55 @@
 
                 <div id="resume_title">Le deivs</div>
                 <div>Dimensions de la pièce : <p id="resume_length" class='resume_lwh'></p>x<p id="resume_width" class='resume_lwh'></p>x<p id="resume_heigth" class='resume_lwh'></p></div>
-                <div>Vous avez choisis<p id="resume_nbColor"></p>couleurs pour les mur</div>
+                <div>Vous avez choisis<p id="resume_nbColor"></p>couleur(s) pour les murs</div>
 
                 <div class="resume_color" id="resume_color1"></div>
                 <div class="resume_color" id="resume_color2"></div>
                 <div class="resume_color" id="resume_color3"></div>
                 <div class="resume_color" id="resume_color4"></div>
                 <div class="resume_color" id="resume_color5"></div>
+
+                <div>Meuble(s) choisi(s) : </div>
+                <section class="lesMeubles">
+                <section class="resume_meuble" id="resume_meuble1">
+                    <img class="resume_image" src="../image/furnitures/bed/bed1.jpg" id="resume_image1">
+                    <div class="resume_name" id="resume_name1">name</div>
+                </section>
+                <section class="resume_meuble" id="resume_meuble1">
+                    <img class="resume_image" src="../image/furnitures/bed/bed1.jpg" id="resume_image1">
+                    <div class="resume_name" id="resume_name1">name</div>
+                </section>
+                <section class="resume_meuble" id="resume_meuble1">
+                    <img class="resume_image" src="../image/furnitures/bed/bed1.jpg" id="resume_image1">
+                    <div class="resume_name" id="resume_name1">name</div>
+                </section>
+                
+                </section>
+                <section class="lesMeubles">
+                <section class="resume_meuble" id="resume_meuble1">
+                    <img class="resume_image" src="../image/furnitures/bed/bed1.jpg" id="resume_image1">
+                    <div class="resume_name" id="resume_name1">name</div>
+                </section>
+                <section class="resume_meuble" id="resume_meuble1">
+                    <img class="resume_image" src="../image/furnitures/bed/bed1.jpg" id="resume_image1">
+                    <div class="resume_name" id="resume_name1">name</div>
+                </section>
+                <section class="resume_meuble" id="resume_meuble1">
+                    <img class="resume_image" src="../image/furnitures/bed/bed1.jpg" id="resume_image1">
+                    <div class="resume_name" id="resume_name1">name</div>
+                </section>
+</section>
+                <div>Sol(s) choisi(s) : </div>
+                <section>
+                    <section class="resume_sol ground" id="resume_sol1">
+                         <div class="square_view" for="ground_cb_2"><img class="ground_img" src="../image/furnitures/ground/Carrelage2.jpg" />
+                         <div class="ground_desription" id="ground_description_2">Carrelage 2</div></div>
+
+                    </section>
+                </section>
+
+
+
 
             </section>
             <br>
