--- a/Final actuel/HTML/Contact.html
+++ b/Final actuel/HTML/Contact.html
@@ -5,92 +5,98 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <html>
-    <head>
-        <title>Contact</title>
-        <meta charset="UTF-8">
-        <link href="../../../../../Desktop/ISEN/WebDev/projet-final-N1-master/LOIC_2.0/csscontact.css" rel="stylesheet" type="text/css"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-        <link href="../font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
-        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-        <link href="../CSS/navbar.css" rel="stylesheet" type="text/css"/>
-        <link href="../CSS/nmode.css" rel="stylesheet" type="text/css"/>
-        <link href="../CSS/csscontact.css" rel="stylesheet" type="text/css"/>
-    </head>
 
-    <body>
-        <nav class="navbar navbar-fixed-top navbar--color--ghost navbar--size--xl" data-startColor="navbar--color--ghost" data-startSize="navbar--size--xl" data-intoColor="navbar--color--secondary" data-intoSize="navbar--size--md" style="padding-top:15px;padding-bottom:15px;">
-            <div class="container-nav">
-                <div class="navbar-header">
-                    <button class="navbar-toggle collapsed buton" type="button" data-toggle="collapse" data-target="#mobileNav" aria-expanded="false">
-                        <!-- <span class="sr-only">Toggle navigation</span> -->
-                        <span class="icon-bar"><i class="fa fa-angle-double-down mr-1"></i></span>
-                    </button>
-                    <a class="navbar-brand" href="Accueil.html">Kebab master</a>
-                    <span onclick="NightM()"><img src="../image/nightmode.png" alt="" id="moon"></span>
-                </div>
-                <div class="collapse navbar-collapse" id="mobileNav">
-                    <div ><a class="navbar-links page" id="display" href="Login.html">login | register</a></div>
-                    <a class="navbar-links page" href="project.html"> Project</a> <br>
-                    <a class="navbar-links page" href="Estimate.html"> Devis</a> <br>
-                </div>
+<head>
+    <title>Contact</title>
+    <meta charset="UTF-8">
+    <link href="../../../../../Desktop/ISEN/WebDev/projet-final-N1-master/LOIC_2.0/csscontact.css" rel="stylesheet" type="text/css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link href="../font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="../CSS/navbar.css" rel="stylesheet" type="text/css" />
+    <link href="../CSS/nmode.css" rel="stylesheet" type="text/css" />
+    <link href="../CSS/csscontact.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+    <nav class="navbar navbar-fixed-top navbar--color--ghost navbar--size--xl" data-startColor="navbar--color--ghost" data-startSize="navbar--size--xl" data-intoColor="navbar--color--secondary" data-intoSize="navbar--size--md" style="padding-top:15px;padding-bottom:15px;">
+        <div class="container-nav">
+            <div class="navbar-header">
+                <button class="navbar-toggle collapsed buton" type="button" data-toggle="collapse" data-target="#mobileNav" aria-expanded="false">
+                    <!-- <span class="sr-only">Toggle navigation</span> -->
+                    <span class="icon-bar"><i class="fa fa-angle-double-down mr-1"></i></span>
+                </button>
+                <a class="navbar-brand" href="Accueil.html">Kebab master</a>
+                <span onclick="NightM()"><img src="../image/nightmode.png" alt="" id="moon"></span>
             </div>
-        </nav>
-        <div class='overlay'>
+            <div class="collapse navbar-collapse" id="mobileNav">
+                <div><a class="navbar-links page" id="display" href="Login.html">login | register</a></div>
+                <a class="navbar-links page" href="project.html"> Project</a> <br>
+                <a class="navbar-links page" href="Estimate.html"> Devis</a> <br>
+            </div>
+        </div>
+    </nav>
+    <div class='overlay'>
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-12">
                     <div class="card bg-dark mb-3" style="width:80% ; margin-top: 15em; margin-left:10%;">
-                        <div class="card-header"><h4 >NOUS CONTACTER</h4></div>
+                        <div class="card-header">
+                            <h4>NOUS CONTACTER</h4>
+                        </div>
                         <div class="container c1">
-                              <div class="row">
-                              <div class="col-md-12">
-                            <p>Besoin d'un renseignement :</p>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <p>Besoin d'un renseignement :</p>
 
-                              </div></div>
+                                </div>
+                            </div>
 
                             <form id="form" method="POST" name="envoi" action="mailto:matthis.bernet@isen.yncrea.fr?Subjet=Formulaire">
                                 <div class="row">
                                     <div class="col-sm-2">
-                                    <label id="contact1" class="obligatoire" for="nom">Nom :</label>
+                                        <label id="contact1" class="obligatoire" for="nom">Nom :</label>
                                     </div>
                                     <div class="col-sm-4">
-                                    <input class="form" type='text' onInput="Verifnom()" id='nom' name='nom' autocomplete="off"> <!--permet de faire rentrer une information à l'utilisateur ici un nom-->
+                                        <input class="form" type='text' onInput="Verifnom()" id='nom' name='nom' autocomplete="off">
+                                        <!--permet de faire rentrer une information à l'utilisateur ici un nom-->
                                     </div>
 
-                                       <div class="col-sm-2">
-                                    <label id="contact2" class="obligatoire" for="prenom">Prenom : </label>
-                                       </div>
+                                    <div class="col-sm-2">
+                                        <label id="contact2" class="obligatoire" for="prenom">Prenom : </label>
+                                    </div>
                                     <div class="col-sm-4">
-                                    <input  class="form" type='text' onInput="Verifprenom()" id='prenom' name='prenom' autocomplete="off">
-                                    <!-- ici un prenom -->
-                                       </div>
+                                        <input class="form" type='text' onInput="Verifprenom()" id='prenom' name='prenom' autocomplete="off">
+                                        <!-- ici un prenom -->
+                                    </div>
                                 </div>
-                                 <div class="row">
-                                     <div class="col-sm-2">
-                                    <label id="contact3" class="obligatoire" for="email">Email :</label>
-                                     </div>
-                                     <div class="col-sm-4">
-                                    <input  class="form" type='email' onInput="Verifemail()" id='email' name='emailaddress' autocomplete="off" >
-                                    <!--permet de faire rentrer une information à l'utilisateur ici une email et seulement une email-->
-                                     </div>
-                                     <div class="col-md-2">
-                                    <label id="contact4"  for="tel">Tel :</label>
-                                     </div>
-                                     <div class="col-sm-4">
-                                    <input type="tel" id="tel" name="tel" pattern="[0-9]{2}.[0-9]{2}.[0-9]{2}.[0-9]{2}.[0-9]{2}" required>
-                                     </div>
+                                <div class="row">
+                                    <div class="col-sm-2">
+                                        <label id="contact3" class="obligatoire" for="email">Email :</label>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <input class="form" type='email' onInput="Verifemail()" id='email' name='emailaddress' autocomplete="off">
+                                        <!--permet de faire rentrer une information à l'utilisateur ici une email et seulement une email-->
+                                    </div>
+                                    <div class="col-md-2">
+                                        <label id="contact4" for="tel">Tel :</label>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <input type="tel" id="tel" name="tel" pattern="[0-9]{2}.[0-9]{2}.[0-9]{2}.[0-9]{2}.[0-9]{2}" required>
+                                    </div>
                                 </div>
                                 <br>
                                 <div class="row">
                                     <div class="col-sm-4">
-                                <label  id="contact5" for="langue" >Reponse en quelle Langue :</label><!--permet de choisir grace à un choix multiple une unique information ici la langue de la reponce-->
+                                        <label id="contact5" for="langue">Reponse en quelle Langue :</label>
+                                        <!--permet de choisir grace à un choix multiple une unique information ici la langue de la reponce-->
                                     </div>
                                     <div class="col-sm-8">
-                                <input type="radio" name="langue" value="fr" class="choice">français
-                                <input type="radio" name="langue" value="en" class="choice">anglais
-                                <input type="radio" name="langue" value="es" class="choice">espagnol
-                                <input type="radio" name="langue" value="it" class="choice">italien<br><br>
+                                        <input type="radio" name="langue" value="fr" class="choice">français
+                                        <input type="radio" name="langue" value="en" class="choice">anglais
+                                        <input type="radio" name="langue" value="es" class="choice">espagnol
+                                        <input type="radio" name="langue" value="it" class="choice">italien<br><br>
                                     </div>
 
 
@@ -98,17 +104,18 @@ and open the template in the editor.
 
 
 
-                                <textarea id="msg" name="message" onInput="Verifmessage()" rows="5"></textarea><!--crée une zone de texte pour envoyer un message-->
-                                <br><br><br>
+                                    <textarea id="msg" name="message" onInput="Verifmessage()" rows="5"></textarea>
+                                    <!--crée une zone de texte pour envoyer un message-->
+                                    <br><br><br>
 
-                                <div class="row">
-                                    <div class="col-sm-2">
-                                    <button id="envoi" class="form" type="button" onClick="Verifmessage(), Verifemail(), Verifprenom(), Verifnom(), Valid(m, e, p, n)">Envoyer</button>
-                                    </div>
-                                    <div class="col-sm-8"></div>
-                                    <div class="col-sm-2">
-                                    <button id="contact7" type="button" class="form" onClick="resetForm()">Réinitialiser</button>
-                                    </div>
+                                    <div class="row">
+                                        <div class="col-sm-2">
+                                            <button id="envoi" class="form" type="button" onClick="Verifmessage(), Verifemail(), Verifprenom(), Verifnom(), Valid(m, e, p, n)">Envoyer</button>
+                                        </div>
+                                        <div class="col-sm-8"></div>
+                                        <div class="col-sm-2">
+                                            <button id="contact7" type="button" class="form" onClick="resetForm()">Réinitialiser</button>
+                                        </div>
 
                             </form>
 
@@ -119,50 +126,51 @@ and open the template in the editor.
                 </div>
             </div>
         </div>
+    </div>
+    </div>
+
+
+    <div class="mt-5 pt-5 pb-5 footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-xs-12 about-company">
+                    <h2 class="footerTitle2">Heading</h2>
+                    <p class="pr-5 text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac ante mollis quam tristique convallis </p>
+                    <p><a href="#"><i class="fa fa-facebook-square mr-1"></i></a><a href="#"><i class="fa fa-linkedin-square"></i></a></p>
+                </div>
+                <div class="col-lg-3 col-xs-12 links">
+                    <h4 class="mt-lg-0 mt-sm-3">Links</h4>
+                    <ul class="m-0 p-0">
+                        <li>- <a href="Contact.html">Contact</a></li>
+                        <li>- <a href="report.html">Report a problem</a></li>
+                        <li>- <a href="commentaire.html">Commentaires</a></li>
+                        <li>- <a href="Login.html">Login</a></li>
+                        <li>- <a href="#">Sed faucibus</a></li>
+                        <li>- <a href="#">Mauris efficitur nulla</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-4 col-xs-12 location">
+                    <h4 class="mt-lg-0 mt-sm-4">Location</h4>
+                    <p>22, Lorem ipsum dolor, consectetur adipiscing</p>
+                    <p class="mb-0"><i class="fa fa-phone mr-3"></i>(541) 754-3010</p>
+                    <p><i class="fa fa-envelope-o mr-3"></i>info@hsdf.com</p>
+                </div>
             </div>
-        </div>
-
-
-<div class="mt-5 pt-5 pb-5 footer">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-lg-5 col-xs-12 about-company">
-                            <h2 class="footerTitle2">Heading</h2>
-                            <p class="pr-5 text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac ante mollis quam tristique convallis </p>
-                            <p><a href="#"><i class="fa fa-facebook-square mr-1"></i></a><a href="#"><i class="fa fa-linkedin-square"></i></a></p>
-                        </div>
-                        <div class="col-lg-3 col-xs-12 links">
-                            <h4 class="mt-lg-0 mt-sm-3">Links</h4>
-                            <ul class="m-0 p-0">
-                                <li>- <a href="Contact.html">Contact</a></li>
-                                <li>- <a href="report.html">Report a problem</a></li>
-                                <li>- <a href="commentaire.html">Commentaires</a></li>
-                                <li>- <a href="Login.html">Login</a></li>
-                                <li>- <a href="#">Sed faucibus</a></li>
-                                <li>- <a href="#">Mauris efficitur nulla</a></li>
-                            </ul>
-                        </div>
-                        <div class="col-lg-4 col-xs-12 location">
-                            <h4 class="mt-lg-0 mt-sm-4">Location</h4>
-                            <p>22, Lorem ipsum dolor, consectetur adipiscing</p>
-                            <p class="mb-0"><i class="fa fa-phone mr-3"></i>(541) 754-3010</p>
-                            <p><i class="fa fa-envelope-o mr-3"></i>info@hsdf.com</p>
-                        </div>
-                    </div>
-                    <div class="row mt-5">
-                        <div class="col copyright">
-                            <p class=""><small class="text-white-50">© 2019. All Rights Reserved.</small></p>
-                        </div>
-                    </div>
+            <div class="row mt-5">
+                <div class="col copyright">
+                    <p class=""><small class="text-white-50">© 2019. All Rights Reserved.</small></p>
                 </div>
             </div>
         </div>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-        <script src="../JS/jscontact.js" type="text/javascript"></script>
-        <script src="../JS/JSNavBarPetit.js" type="text/javascript"></script>
-    </body>
+    </div>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="../JS/jscontact.js" type="text/javascript"></script>
+    <script src="../JS/JSNavBarPetit.js" type="text/javascript"></script>
+</body>
+
 </html>
